[package]
name = "h2-fuzz"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2018"

[dependencies]
h2 = { path = "../.." }

tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter"]}
futures = { version = "0.3", default-features = false }
honggfuzz = "0.5"
http = "0.2"
tokio = { version = "0.2", features = [] }
